[package]
name = "rustilege"
version = "0.4.0"
edition = "2024"
authors = ["Tina-1300"]
description = "Rust library allowing you to recover current privileges under Windows"
license = "MIT"
keywords = ["api", "windows", "privileges", "rustilege", "parser"]
repository = "https://github.com/Tina-1300/rustilege"

[dependencies]

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62.2", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Threading"
] }

[target.'cfg(unix)'.dependencies]
nix = "0.30.1"