[package]
name = "rustilege"
version = "0.5.1"
edition = "2024"
authors = ["Tina-1300"]
description = "Rust library allowing you to recover current privileges under Windows and Linux"
license = "MIT"
keywords = ["api", "windows", "privileges", "rustilege", "Linux"]
repository = "https://github.com/Tina-1300/rustilege"

[dependencies]

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62.2", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Threading"
] }
# tester sur le raspberry pi si on peut ce débarrasser de la dépendance nix ou si elle nous est utile 
[target.'cfg(unix)'.dependencies]
nix = "0.30.1"